# thorium

./: .gclient  .gitattributes  .gitignore  .gitmodules  69_release_args.gn  BRANDING  BUGS.md  BUILD.gn  BUILDER  CODE_OF_CONDUCT.md  CUR_VERSION  LICENSE.md  MAC_ARGS.gn  PATCHES  PATCHES.md  PATCHES.txt  PKGBUILD  README.md  SECURITY.md  TODO.md  VERSION  VERSION.sh  aliases  aliases.txt  android_args.gn  args  args.gn  args.list  autobuild.sh  build.sh  build_android.sh  build_dmg.sh  build_mac.sh  build_win.sh  bunsen-keyring_2020.10.10+bl8-2_all.deb  check_avx.sh  check_simd.sh  chromium_strings.grd  clean.sh  create_dmg.sh  (+28 more)
arm/: README.md  android_ARM32_args.gn  android_ARM64_args.gn  arm.gni  mac_arm.gni  raspi_BUILD.gn  raspi_args.gn  raspi_arm.gni  setup_arm.sh  thorium_version.txt  win_ARM_args.gn  woa_arm.gni
arm/android/: README.md  android_ARM32_args.gn  android_ARM64_args.gn  android_arm32_args.gn  android_arm64_args.gn  android_x64_args.gn  android_x86_args.gn  args.list  arm32_args.gn  arm64_args.gn  chromium_android_args.gn  chromium_args.gn  debug_args.gn  x64_args.gn  x86_args.gn
arm/config/: arm.gni
arm/raspi/: netflix.patch  raspi_args.gn  widevine-other-locations.patch  widevine_fixup.py
infra/: 0001-Revert-cleanup-Remove-JPEG-XL-image-type-emulation.patch  0001-Revert-remove-JPEG-XL-support.patch  69_release_args.gn  BRANDING  BUGS.md  BUILD.gn  BUILDER  BUILDING.md  BUILDING_OLD.md  CMDLINE_FLAGS_LIST.md  CMDLINE_FLAGS_LIST.rtf  DEPOT_TOOLS_REVISION  DEV_CMDLINE_FLAGS.txt  FFMPEG_DEPS  Fix-policy-templates.patch  PATCHES.md  PKGBUILD  README.md  REMOVED_ARGS.txt  THORIUM_DEV_BOOKMARKS.html  THOR_PREREQUISITES_22.04.md  THOR_PREREQUISITES_22.04.txt  TODO.md  VERSIONS_LIST.txt  WIN_CROSS_BUILD_INSTRUCTIONS.txt  WIN_INSTRUCTIONS.txt  android_args.gn  arch-prerequisites.sh  args.list  build_dmg_cr.sh  build_ffmpeg.sh  build_polly.sh  cgpt  cros_args.gn  fetch_api_keys.sh  fix_libaom.sh  gn_args.list  google_api_keys-inc.cc  initial_preferences  install_deps.sh  (+18 more)
infra/APPIMAGE/: README.md  Thorium.yml  build_appimage.sh  extract_appimage.sh  make_appimage.sh  outc  pkg2appimage
infra/Arch_Linux/: .SRCINFO  .gitignore  PKGBUILD  thorium-browser.install  thorium-browser.sh  update_version.sh
infra/DEBUG/: ABOUT_GN_ARGS.md  ABOUT_GN_ARGS.txt  DEBUGGING.md  DEBUG_SHELL_README.md  README.md  Thorium_Debug_Shell.sh  build_debug.sh  build_debug_linux.sh  build_debug_shell.sh  build_debug_shell_linux.sh  build_debug_shell_win.sh  build_debug_win.sh  build_win_debug.sh  debug_args.gn  mac_ARM_debug_args.gn  mac_x64_debug_args.gn  test_args.gn  test_build_args.gn  test_build_win_args.gn  win_SYMBOLS_BUILD.gn  win_debug_args.gn
infra/default_apps/: external_extensions.json
infra/hangout_services/: README.md  manifest.json
infra/portable/: README.debug  README.linux  README.md  README.win  THORIUM-PORTABLE  THORIUM-PORTABLE.sh  THORIUM-SHELL  THORIUM-SHELL.sh  THORIUM.BAT  THORIUM_SHELL.BAT  build_portable_binaries.sh  make_portable_linux.sh  make_portable_win.py  make_portable_win.sh
infra/sfx/: config.txt
infra/temp/: browser_tools.bak
infra/thor_ver_linux/: wrapper-avx2  wrapper-avx512  wrapper-sse2  wrapper-sse3  wrapper-sse4
other/: Android-Remove-discovery-module-from-NTP.patch  BUILD.gn  GPC-2.patch  GPC.patch  README.md  Remove-discovery-module-from-NTP.patch  SSE3  add-hevc-ffmpeg-decoder-parser.js  add-hevc-ffmpeg-decoder-parser.patch  add-hevc-ffmpeg-decoder-parser.patch1  build_ffmpeg.py  build_polly.sh  change-libavcodec-header.patch  chromium_options.reg  disable-privacy-sandbox.patch  enable-extension-incognito-thorium.patch  enable-extensions-android-thorium.patch  ffmpeg_hevc_ac3.patch  fix-policy-templates.patch  fix_absl_undefined_symbol.patch  fix_dangling_pointer_tooltip.patch  fix_disable_aero_crash.patch  fix_drag_and_drop_on_wayland.patch  fix_file_dialog_crash.patch  fix_getupdatesprocessor_crash.patch  fix_profile_selector_crash.patch  fix_setting_popover_invoker_crash.patch  fix_touch_emulator_double_tap_zoom.patch  fix_wayland_scale_crash.patch  ftp-support-thorium.patch  keyboard_shortcuts.patch  mini_installer.patch  open_in_same_tab.patch  partalloc.patch  remove_discovery_module_from_ntp.patch  restore_download_shelf.patch  skia_scale.patch  test_build_args.gn  thorium-2024-ui.patch  thorium_webui.patch  (+1 more)
other/AVX2/: AVX2_args.gn  README.md  linux_AVX2_args.gn  thor_ver  win_AVX2_args.gn
other/AVX512/: AVX512_args.gn  thor_ver  thorium_version.txt  win_AVX512_args.gn
other/Android/: android_args.gn
other/CrOS/: README.md  cros_args.gn  thorium_version.txt
other/Mac/: README.md  arm.gni  cdm_registration.cc  mac_ARM_args.bak  mac_ARM_args.gn  mac_args.gn  mac_args.list  thorium_version.txt
other/Polly/: setup_polly.sh
other/SSE2/: README.md  angle-lockfree.patch  args_SSE2.gn  support-i386.patch  thor_ver  win32_SSE2_args.gn  win32_args.gn  win64_SSE2_args.gn  win_SSE2_args.gn
other/SSE3/: README.md  args_SSE3.gn  thor_ver  win32_SSE3_args.gn  win64_SSE3_args.gn  win_SSE3_args.gn
other/SSE4/: README.md
other/SSE4.1/: README.md  SSE4_args.gn  args_SSE4.1.gn  args_SSE4.gn  thor_ver  thorium_version.txt  win32_SSE4.1_args.gn  win64_SSE4.1_args.gn  win_SSE4.1_args.gn  win_SSE4_args.gn
other/SSE4.2/: README.md  args_SSE4.2.gn  thor_ver  thorium_version.txt  win32_SSE4.2_args.gn  win64_SSE4.2_args.gn  win_SSE4.2_args.gn
other/WIN7/: README.md  TODO.txt  about_version.html
other/avx2/: win_AVX2_args.gn
other/i386/: win32_args.gn
other/sse4/: CROSS_BUILD_VS_ARCHIVE  win_args.gn
other/thor_ver_linux/: wrapper-avx2  wrapper-avx512  wrapper-raspi  wrapper-sse2  wrapper-sse3  wrapper-sse4
pak/: CMakeLists.txt  appveyor.yml  main.c  main.h  pack.bat  pak_file.c  pak_file.h  pak_get_file_type.c
pak_src/: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.bat  build.sh  chromium_ascii_art.sh  commandlinetoargva.h  main.c  pack.bat  pak_defs.h  pak_file_io.c  pak_file_io.h  pak_get_file_type.h  pak_header.c  pak_header.h  pak_pack.c  pak_pack.h  test.sh  unpack.bat
pak_src/binaries/: pak  (+1 more)
(+793 files in other folders)
