google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
enable_stripping = true
is_official_build = true
is_debug = false
dcheck_always_on = false
exclude_unwind_tables = true
# enable_debugallocation = false
enable_iterator_debugging = false
disable_fieldtrial_testing_config = true
enable_resource_allowlist_generation = false
enable_profiling = false
is_component_build = false
symbol_level = 0
optimize_webui = true
use_lld = true
blink_symbol_level=0
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_sample_aes = true
enable_ink = false
enable_discovery = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_ffmpeg_video_decoders = true
use_vr_assets_component = true
enable_widevine = true
enable_media_drm_storage = true
enable_media_overlay = true
enable_hangout_services_extension = true
enable_vr = true
enable_platform_hevc = true
enable_platform_hevc_decoding = true
enable_platform_ac3_eac3_audio = true
enable_platform_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_mse_mpeg2ts_stream_parser = true
enable_platform_encrypted_hevc = true
use_thin_lto = true
thin_lto_enable_optimizations = true
target_os = "android"
target_cpu = "arm64"
