google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
target_os = "linux"
target_cpu = "arm64"
use_system_minigbm = false
use_vc4_minigbm = true
enable_linux_installer = true
enable_distro_version_check = false
enable_stripping = true
is_official_build = true
is_debug = false
dcheck_always_on = false
exclude_unwind_tables = true
# enable_debugallocation = false
enable_iterator_debugging = false
disable_fieldtrial_testing_config = true
enable_resource_allowlist_generation = false
enable_profiling = false
is_component_build = false
symbol_level = 0
enable_nacl = false
optimize_webui = true
use_lld = true
v8_symbol_level = 0
blink_symbol_level = 0
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_sample_aes = true
enable_hls_demuxer = true
enable_ink = false
enable_discovery = true
enable_cros_media_app = false
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = true
use_webaudio_ffmpeg = false
use_webaudio_pffft = true
# enable_av1_decoder = true
# enable_dav1d_decoder = true
use_vaapi = true
enable_widevine = true
bundle_widevine_cdm = false
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
enable_media_overlay = true
enable_hangout_services_extension = true
rtc_use_h264 = true
rtc_include_ilbc = true
rtc_build_with_neon = true
rtc_build_examples = false
enable_vr = true
use_vr_assets_component = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
enable_platform_ac3_eac3_audio = true
enable_platform_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_thin_lto = true
thin_lto_enable_optimizations = true
chrome_pgo_phase = 2
pgo_data_path = "/home/alex/chromium/src/chrome/build/pgo_profiles/chrome-linux-main-1651730035-7c2bc9c754f16e0cb15fef8a61ff068912477ab5.profdata"
