google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
target_os = "linux"
target_cpu = "x64"
enable_linux_installer = true
enable_distro_version_check = false
is_official_build = true
is_debug = false
dcheck_always_on = false
enable_debugallocation = false
enable_iterator_debugging = false
enable_profiling = false
is_component_build = false
symbol_level = 0
enable_nacl = false
optimize_webui = true
use_lld = true
blink_symbol_level=0
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_sample_aes = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = true
use_webaudio_ffmpeg = false
enable_media_overlay = true
enable_widevine = true
bundle_widevine_cdm = true
should_bundle_widevine_cdm = true
use_vaapi = true
use_vr_assets_component = true
enable_hangout_services_extension = true
rtc_use_h264 = true
rtc_include_ilbc = true
enable_vr = true
enable_mse_mpeg2ts_stream_parser = true
use_thin_lto = true
thin_lto_enable_optimizations = true

