google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
visual_studio_version = "2022"
target_os = "win"
target_cpu = "x64"
is_official_build = true
disable_fieldtrial_testing_config = true
symbol_level = 0
enable_nacl = false
enable_hls_sample_aes = true
enable_hls_demuxer = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_widevine = true
bundle_widevine_cdm = false
enable_media_drm_storage = true
enable_hangout_services_extension = true
rtc_use_h264 = true
rtc_include_ilbc = true
rtc_build_examples = false
enable_vr = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
enable_platform_ac3_eac3_audio = true
enable_platform_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_mse_mpeg2ts_stream_parser = true
