google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
target_os = "linux"
target_cpu = "x64"
is_debug = false
disable_fieldtrial_testing_config = true
enable_reporting = false
is_component_build = true
enable_nacl = false
optimize_webui = true
enable_webui_tab_strip = true
treat_warnings_as_errors = false
v8_enable_fast_torque = true
use_v8_context_snapshot = true
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_demuxer = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
clang_use_chrome_plugins = false
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = true
use_webaudio_ffmpeg = false
use_webaudio_pffft = true
use_vaapi = true
enable_library_cdms = true
enable_widevine = true
bundle_widevine_cdm = false
enable_cdm_host_verification = false
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
enable_hangout_services_extension = true
rtc_use_h264 = true
rtc_include_ilbc = true
rtc_build_examples = true
rtc_enable_avx2 = true
enable_vr = true
use_vr_assets_component = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
enable_platform_ac3_eac3_audio = true
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_thin_lto = true
