google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
# Hopefully re-enable
enable_jxl_decoder = false
target_os = "android"
target_cpu = "arm"
v8_target_cpu = "arm"
arm_version = 7
arm_arch = "armv7-a"
arm_tune = "generic-armv7-a"
# arm_float_abi = "softfp"
arm_use_thumb = true
arm_use_neon = true
arm_optionally_use_neon = false
arm_fpu = "neon"
is_official_build = true
is_high_end_android = false
use_relr_relocations = false
optimize_for_size = false
# optimize_for_speed = true
is_debug = false
is_java_debug = false
debuggable_apks = false
# is_cfi = true
use_relative_vtables_abi = false
icu_use_data_file = true
# use_cfi_cast = true
v8_use_external_startup_data = true
android_channel = "stable"
disable_android_lint = true
enable_stripping = true
thin_lto_enable_cache = false
strip_debug_info = true
dcheck_always_on = false
exclude_unwind_tables = true
# enable_debugallocation = false
enable_iterator_debugging = false
disable_fieldtrial_testing_config = true
enable_reporting = false
enable_remoting = false
enable_resource_allowlist_generation = false
enable_profiling = false
is_component_build = false
symbol_level = 0
enable_nacl = false
optimize_webui = true
treat_warnings_as_errors = false
system_webview_package_name = "com.thorium.webview"
trichrome_library_package = "org.thorium.trichromelibrary"
system_webview_shell_package_name = "org.thorium.webview_shell"
# webview_includes_weblayer = true
use_lld = true
v8_symbol_level = 0
v8_enable_fast_torque = true
v8_enable_builtins_optimization = true
v8_enable_maglev = true
v8_enable_turbofan = true
use_v8_context_snapshot = false
blink_symbol_level = 0
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
# enable_hls_sample_aes = true
# enable_hls_demuxer = true
enable_ink = false
enable_discovery = true
enable_cros_media_app = false
proprietary_codecs = true
ffmpeg_branding = "Chrome"
clang_use_chrome_plugins = true
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = false
# use_webaudio_ffmpeg = false
use_webaudio_pffft = true
# enable_av1_decoder = true
# enable_dav1d_decoder = true
enable_widevine = true
bundle_widevine_cdm = false
enable_cdm_host_verification = false
# enable_widevine_cdm_component = true
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
# enable_media_overlay = true
enable_hangout_services_extension = true
rtc_use_h264 = false
rtc_prefer_fixed_point = true
rtc_include_ilbc = true
# rtc_build_with_neon = false
rtc_build_examples = false
rtc_enable_avx2 = false
enable_vr = true
# use_vr_assets_component = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
enable_platform_ac3_eac3_audio = true
enable_platform_ac4_audio = false
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_thin_lto = true
thin_lto_enable_optimizations = true
enable_rust = true
chrome_pgo_phase = 0
# pgo_data_path = "/home/alex/chromium/src/chrome/build/pgo_profiles/chrome-android32-main-1696269474-d9cc430a376fd26e31c2c2b532aa055bbc985f6f.profdata"
