target_os = "linux"
target_cpu = "arm64"
v8_target_cpu = "arm64"
is_raspi = true
# sysroot = "/home/alex/chromium/src/build/linux/debian_bullseye_arm64-sysroot"
arm_version = 8
arm_arch = "armv8-a"
arm_fpu = "neon-vfpv4"
arm_tune = "cortex-a72"
arm_use_neon = true
arm_optionally_use_neon = true
arm_use_thumb = true
# Disabled due to breakage
#use_system_minigbm = false
#use_vc4_minigbm = true
angle_enable_vulkan = false
enable_swiftshader_vulkan = false
enable_linux_installer = true
enable_distro_version_check = false
is_official_build = true
is_debug = false
enable_stripping = true
thin_lto_enable_cache = false
dcheck_always_on = false
exclude_unwind_tables = true
disable_fieldtrial_testing_config = true
enable_reporting = false
enable_resource_allowlist_generation = false
enable_profiling = false
is_component_build = false
symbol_level = 0
enable_nacl = false
optimize_webui = true
enable_webui_tab_strip = true
is_clang = true
treat_warnings_as_errors = false
# llvm_force_head_revision = true
use_lld = true
use_icf = true
is_cfi = true
v8_symbol_level = 0
v8_enable_fast_torque = true
v8_enable_builtins_optimization = true
v8_enable_maglev = true
v8_enable_turbofan = true
# v8_enable_wasm_simd256_revec = true
use_v8_context_snapshot = true
blink_symbol_level = 0
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_demuxer = true
enable_discovery = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
clang_use_chrome_plugins = true
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = true
use_webaudio_pffft = true
use_vaapi = true
enable_library_cdms = true
enable_widevine = true
bundle_widevine_cdm = false
enable_cdm_host_verification = false
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
# enable_media_overlay = true
enable_hangout_services_extension = false
rtc_use_h264 = true
rtc_use_h265 = true
# rtc_build_with_neon = true
rtc_build_examples = false
enable_vr = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
platform_has_optional_hevc_decode_support = true
platform_has_optional_hevc_encode_support = false
enable_platform_ac3_eac3_audio = true
enable_platform_ac4_audio = false
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_text_section_splitting = true
use_thin_lto = true
thin_lto_enable_optimizations = true
enable_rust = true
chrome_pgo_phase = 0
# pgo_data_path = "/home/alex/chromium/src/chrome/build/pgo_profiles/chrome-linux-6367-1713241470-670276ef28f19a417eb8760095e8d97cc8fc8d30-9efed7f2d85678370a0b4dbeb319bf6021e620d0.profdata"
