use_sse3 = true
use_sse41 = true
use_sse42 = true
use_avx = true
use_avx2 = false
use_avx512 = false
use_fma = false

target_os = "win"
target_cpu = "x64"
is_official_build = false
is_debug = false
thorium_debug = false
enable_stripping = false
thin_lto_enable_cache = false
dcheck_always_on = true
exclude_unwind_tables = false
disable_fieldtrial_testing_config = true
enable_reporting = false
enable_resource_allowlist_generation = false
is_component_build = false
symbol_level = 1
optimize_webui = false
enable_webui_tab_strip = true
is_clang = true
treat_warnings_as_errors = false
v8_symbol_level = 1
v8_enable_fast_torque = true
blink_symbol_level = 1
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_demuxer = true
enable_discovery = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
# Set to false for Polly build
clang_use_chrome_plugins = false
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = true
use_webaudio_pffft = true
enable_library_cdms = true
enable_widevine = true
bundle_widevine_cdm = false
# enable_media_foundation_widevine_cdm = true
# enable_cdm_host_verification = true
enable_cdm_storage_id = false
enable_rlz = false
enable_widevine_cdm_host_verification = true
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
enable_hangout_services_extension = false
rtc_use_h264 = true
rtc_use_h265 = true
rtc_build_examples = true
rtc_enable_avx2 = true
enable_vr = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
platform_has_optional_hevc_decode_support = true
platform_has_optional_hevc_encode_support = true
enable_platform_ac3_eac3_audio = true
enable_platform_ac4_audio = false
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_thin_lto = false
thin_lto_enable_optimizations = false
enable_rust = true
init_stack_vars_zero = false
chrome_pgo_phase = 0
