google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
target_os = "win"
target_cpu = "x64"
enable_stripping = false
is_official_build = false
is_debug = true
dcheck_always_on = true
exclude_unwind_tables = false
# enable_debugallocation = false
enable_iterator_debugging = true
disable_fieldtrial_testing_config = true
enable_resource_allowlist_generation = true
enable_profiling = true
is_component_build = false
symbol_level = 2
use_debug_fission = true
optimize_webui = false
enable_webui_tab_strip = true
use_lld = true
v8_symbol_level = 2
use_v8_context_snapshot = true
enable_nacl = false
blink_symbol_level = 2
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_sample_aes = true
enable_hls_demuxer = true
enable_ink = false
enable_discovery = true
enable_cros_media_app = false
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = false
use_webaudio_ffmpeg = false
use_webaudio_pffft = true
use_vr_assets_component = true
enable_widevine = true
bundle_widevine_cdm = false
enable_media_drm_storage = true
enable_media_overlay = true
enable_hangout_services_extension = true
rtc_use_h264 = true
rtc_include_ilbc = true
rtc_build_examples = true
# rtc_enable_avx2 = true
enable_vr = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
enable_platform_ac3_eac3_audio = true
enable_platform_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_thin_lto = true
