google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
# is_chancie_wancie_build = true
# clang_base_path = "/usr/lib/llvm-18"
# clang_version = "18"
# use_polly = true
target_os = "chromeos"
is_chromeos_device = false
target_cpu = "x64"
is_official_build = true
is_debug = false
enable_stripping = true
thin_lto_enable_cache = true
dcheck_always_on = false
exclude_unwind_tables = true
# enable_debugallocation = false
enable_iterator_debugging = false
disable_fieldtrial_testing_config = true
enable_reporting = false
enable_resource_allowlist_generation = false
enable_profiling = false
is_component_build = false
symbol_level = 0
enable_nacl = false
optimize_webui = true
enable_webui_tab_strip = true
is_clang = true
treat_warnings_as_errors = false
# llvm_force_head_revision = true
use_lld = true
use_icf = true
# is_cfi = true
v8_symbol_level = 0
v8_enable_fast_torque = true
v8_enable_builtins_optimization = true
v8_enable_maglev = true
v8_enable_turbofan = true
v8_enable_wasm_simd256_revec = true
use_v8_context_snapshot = true
blink_symbol_level = 0
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
# enable_hls_sample_aes = true
enable_hls_demuxer = true
enable_ink = false
enable_discovery = true
enable_cros_media_app = false
proprietary_codecs = true
ffmpeg_branding = "Chrome"
# Set to false for Polly build
clang_use_chrome_plugins = true
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = true
# use_webaudio_ffmpeg = false
use_webaudio_pffft = true
# enable_av1_decoder = true
# enable_dav1d_decoder = true
use_vaapi = true
enable_library_cdms = true
enable_widevine = true
bundle_widevine_cdm = true
# enable_widevine_cdm_component = true
enable_cdm_host_verification = false
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
# enable_media_overlay = true
enable_hangout_services_extension = true
rtc_use_h264 = true
rtc_include_ilbc = true
# rtc_build_with_neon = true
rtc_build_examples = false
rtc_enable_avx2 = true
enable_vr = true
# use_vr_assets_component = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
enable_platform_ac3_eac3_audio = true
enable_platform_ac4_audio = false
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_text_section_splitting = true
use_thin_lto = true
thin_lto_enable_optimizations = true
# enable_rust = true
# enable_all_rust_features = true
init_stack_vars_zero = true
# chrome_pgo_phase = 2
