use_sse3 = false
use_sse41 = false
use_sse42 = false
use_avx = false
use_avx2 = false
use_avx512 = false
use_fma = false

# use_polly = true
# use_bolt = true
target_os = "win"
target_cpu = "x86"
msvc_use_sse2 = true
is_official_build = true
is_debug = false
enable_stripping = true
thin_lto_enable_cache = false
dcheck_always_on = false
exclude_unwind_tables = true
enable_iterator_debugging = false
disable_fieldtrial_testing_config = true
enable_reporting = false
enable_resource_allowlist_generation = false
enable_profiling = false
is_component_build = false
symbol_level = 0
enable_nacl = false
optimize_webui = true
enable_webui_tab_strip = true
is_clang = true
treat_warnings_as_errors = false
# llvm_force_head_revision = true
win_enable_cfg_guards = true
use_lld = true
v8_symbol_level = 0
v8_enable_fast_torque = true
v8_enable_builtins_optimization = true
v8_enable_maglev = false
# v8_enable_turbofan = false
# v8_enable_wasm_simd256_revec = true
# use_v8_context_snapshot = true
blink_symbol_level = 0
enable_precompiled_headers = false
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_demuxer = true
enable_discovery = false
proprietary_codecs = true
ffmpeg_branding = "Chrome"
# Set to false for Polly build
clang_use_chrome_plugins = true
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = true
use_webaudio_pffft = true
enable_library_cdms = true
enable_widevine = true
bundle_widevine_cdm = true
# enable_media_foundation_widevine_cdm = true
# enable_cdm_host_verification = true
enable_cdm_storage_id = true
enable_widevine_cdm_host_verification = true
enable_rlz = true
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
enable_hangout_services_extension = false
rtc_use_h264 = true
rtc_use_h265 = true
rtc_build_examples = false
rtc_enable_avx2 = false
enable_vr = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
platform_has_optional_hevc_decode_support = true
platform_has_optional_hevc_encode_support = true
enable_platform_ac3_eac3_audio = true
enable_platform_ac4_audio = false
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_text_section_splitting = true
use_thin_lto = true
thin_lto_enable_optimizations = true
enable_rust = true
chrome_pgo_phase = 2
pgo_data_path = "/home/alex/chromium/src/chrome/build/pgo_profiles/chrome-win32-7204-1753701040-ecc2c5301ea7719ab1e76d213a20e6f2f179c2dc-196e29864b933c88bad7003ef2a6f6f1ba34ba6a.profdata"
